--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "language-pulsar-syntax",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "description": "Test and view how different scopes look on Pulsar Themes",
+  "keywords": [ "text-mate", "pulsar-package", "pulsar-edit"],
+  "author": "confused-Techie",
+  "license": "MIT",
+  "repository": "https://github.com/confused-Techie/language-pulsar-syntax"
 }
